--- a/ariadne-skein/ariadne-skein.csproj
+++ b/ariadne-skein/ariadne-skein.csproj
@@ -44,12 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Algorithms\BreathFirst.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="PathFinder.cs" />
     <Compile Include="BreadCrumb.cs" />
+    <Compile Include="PriorityQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Algorithms\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
